# mbed-client-randlib

./: CMakeLists.txt  Makefile  randlib-mbed.cmake  randlib.cmake  repositories.cmake  run_unit_tests.sh
mbed-client-randlib/: randLIB.h
mbed-client-randlib/platform/: arm_hal_random.h
source/: randLIB.c
test/: README.md
test/mbed-client-randlib/unittest/: Makefile  makefile_defines.txt
test/mbed-client-randlib/unittest/randlib/: Makefile
test/mbed-client-randlib/unittest/stubs/: random_stub.c
test/randlib/: randlibtest.cpp  test_randlib.c  test_randlib.h
test/stubs/: random_stub.c
